MDEV-38873 json_extract returns NULL through derived table

json_extract() passes its result through json_nice() with LOOSE
format, which can expand the output by adding spaces after commas
and colons. The max_length was not accounting for this expansion,
causing derived tables to truncate the result and the outer
json_extract() to fail with "Unexpected end of JSON text".

Fix by multiplying max_length by 2 to match JSON_FORMAT(LOOSE).

Signed-off-by: Varun Deep Saini <varun.23bcs10048@ms.sst.scaler.com>